* Fixing parcelable in TehilimGenerator * Adding TikunKlaliGenerator and SickPrayerGenerator * Enabling the buttons for Yehi Ratson to be shown in tehilim book view

--- a/Tehilim/res/values-iw/strings.xml
+++ b/Tehilim/res/values-iw/strings.xml
@@ -33,7 +33,7 @@
 <string name="shira5Title">פרק חמישי - שיר הבהמות והחיות</string>
 <string name="shira6Title">פרק ששי - שיר השרצים והחיות</string>
 <string name="shiraSofTitle">הסוף</string>
-<string name="shiraPrayer">תפילה לאחר פרק שירה
+<string name="shiraTfilaTitle">תפילה לאחר פרק שירה
 \n<small>מאת הגאון הרב גרוס שליט\"א</small></string>
         
 <string name="tikunKlaliTitle">תיקון הכללי</string>
