--- a/Tehilim/res/values/strings.xml
+++ b/Tehilim/res/values/strings.xml
@@ -37,7 +37,7 @@
 <string name="shira5Title">Fifth Chapter - Of Animals and Beasts</string>
 <string name="shira6Title">Sixth Chapter - Of Animals and Vermin</string>
 <string name="shiraSofTitle">The End</string>
-<string name="shiraPrayer">A Prayer after Perek Shira \n<small>Edited by Rabbi Gross</small></string>
+<string name="shiraTfilaTitle">A Prayer after Perek Shira \n<small>Edited by Rabbi Gross</small></string>
 
 <string name="tikunKlaliTitle">Tikun HaKlali</string>
 <string name="tikunBeforeTitle">Before the Tikun one should say</string>
