--- a/Tehilim/res/values/strings.xml
+++ b/Tehilim/res/values/strings.xml
@@ -6,75 +6,105 @@
     <string name="action_help">Help</string>
     <string name="action_about">About</string>
     <string name="action_search">Search Chapters</string>
-	<string name="drawer_open">Open Drawer</string>
-	<string name="drawer_close">Close Drawer</string>
-	<string name="quick_title">Quick Access</string>
-	<string name="brows_title">Tehilim</string>
-	<string name="additional_title">Additional Prayers</string>
-	
-		<string name="books_title">By Books</string>
-	<string name="week_title">By Week</string>
-	<string name="month_title">By Month</string>
-	
-	<string name="free_title">Get the ad free version now!</string>
-	<string name="free_desc">Get the ad free version for only 0.99$, and get rid of those ads forever</string>
-	<string name="ok">OK</string>
-	
-	<string name="plus">+</string>
-<string name="minus">-</string>
+    <string name="drawer_open">Open Drawer</string>
+    <string name="drawer_close">Close Drawer</string>
+    <string name="quick_title">Quick Access</string>
+    <string name="brows_title">Tehilim</string>
+    <string name="additional_title">Additional Prayers</string>
+    <string name="version">Version</string>
+    <string name="feedback">Feedback and Support</string>
+    <string name="rate">Rate us</string>
+    <string name="facebook_url">https://www.facebook.com/smartsiddurandroid</string>
+    <string name="github_url">https://github.com/orelzion/tehilim</string>
+    <string name="version_info">
+<![CDATA[
+	    
+	    ]]>
+    </string>
+    <string name="books_title">By Books</string>
+    <string name="week_title">By Week</string>
+    <string name="month_title">By Month</string>
+    <string name="free_title">Get the ad free version now!</string>
+    <string name="free_desc">Get the ad free version for only 0.99$, and get rid of those ads forever</string>
+    <string name="ok">OK</string>
+    <string name="plus">+</string>
+    <string name="minus">-</string>
+    <string name="navigation_drawer_open">Open Navigation Drawer</string>
+    <string name="navigation_drawer_close">Close Drawer</string>
+    <string name="chapter">Chapter %1$s</string>
+    <string name="chapterKuf">Chapter %1$s - Letter %2$s</string>
+    <string name="shiraTitle">Perek Shira</string>
+    <string name="shira1Title">First Chapter - Of Earth, Heaven and their Hosts</string>
+    <string name="shira2Title">Second Chapter - Of Day and Night</string>
+    <string name="shira3Title">Third Chapter - Of the Flora</string>
+    <string name="shira4Title">Fourth Chapter - Of Birds and Vermin on Earth and Sea</string>
+    <string name="shira5Title">Fifth Chapter - Of Animals and Beasts</string>
+    <string name="shira6Title">Sixth Chapter - Of Animals and Vermin</string>
+    <string name="shiraSofTitle">The End</string>
+    <string name="shiraTfilaTitle">A Prayer after Perek Shira \n<small>Edited by Rabbi Gross</small></string>
+    <string name="tikunKlaliTitle">Tikun HaKlali</string>
+    <string name="tikunBeforeTitle">Before the Tikun one should say</string>
+    <string name="tikunAfter">A small but powerful prayer</string>
+    <string name="sickTitle">Prayer for the Sick</string>
+    <string name="yehiAfterTitle">Prayer After Tehilim</string>
+    <string name="yehiTitle">Prayer Before Tehilim</string>
+    <string name="all_tehilim">All Psalms</string>
+    <string name="choose_day">Choose Day</string>
+    <string name="dayInMonth">Day %1$s</string>
+    <string name="tehilim_for_day">Tehilim for %1$s</string>
+    <string name="for_full_tehilim">Should you have finished the whole book of Tehilim say:</string>
+    <string name="for_partial_tehilim">Should you havn\'t finished the whole book of Tehlim say:</string>
+    <string name="for_sick">Please say the sick\'s name and Mother\'s name</string>
 
-<string name="navigation_drawer_open">Open Navigation Drawer</string>
-<string name="navigation_drawer_close">Close Drawer</string>
+    <string-array name="books">
+        <item>First Book</item>
+        <item>Second Book</item>
+        <item>Third Book</item>
+        <item>Fourth Book</item>
+        <item>Fifth Book</item>
+    </string-array>
+    <string-array name="week_days">
+        <item>Sunday</item>
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+        <item>Shabbat</item>
+    </string-array>
 
-<string name="chapter">Chapter %1$s</string>
-<string name="chapterKuf">Chapter %1$s - Letter %2$s</string>
+    <!-- Preferences -->
+    <string name="appearance_title">Appearance Settings</string>
+    <string name="general_title">General Settings</string>
+    <string name="choose_font">Choose Font</string>
+    <string name="keep_portrait">Keep Portrait</string>
+    <string name="keep_portrait_description">Do not rotate the screen</string>
+    <string name="themes_title">Choose Theme</string>
+    <string name="choose_lang">Change Language</string>
+    <string name="rtl_title">Reverse Alignment</string>
+    <string name="rtl_description">Enable this option if your device represent the Hebrew text from left to right"</string>
+    <string name="screen_on">Screen On</string>
+    <string name="screen_on_description">Keeps the screen on while in the app</string>
+    <string name="silent_title">Silent Mode</string>
+    <string name="reading_mode">Reading Mode</string>
 
-<string name="shiraTitle">Perek Shira</string>
-<string name="shira1Title">First Chapter - Of Earth, Heaven and their Hosts</string>
-<string name="shira2Title">Second Chapter - Of Day and Night</string>
-<string name="shira3Title">Third Chapter - Of the Flora</string>
-<string name="shira4Title">Fourth Chapter - Of Birds and Vermin on Earth and Sea</string>
-<string name="shira5Title">Fifth Chapter - Of Animals and Beasts</string>
-<string name="shira6Title">Sixth Chapter - Of Animals and Vermin</string>
-<string name="shiraSofTitle">The End</string>
-<string name="shiraTfilaTitle">A Prayer after Perek Shira \n<small>Edited by Rabbi Gross</small></string>
+    <string-array name="themes_values">
+        <item>Light</item>
+        <item>Dark</item>
+    </string-array>
+    <string-array name="language_values">
+        <item>עברית</item>
+        <item>English</item>
+        <item>System Configured</item>
+    </string-array>
+    <string-array name="silent_mode_valuse">
+        <item>Always</item>
+        <item>Never</item>
+        <item>Ask me every time</item>
+    </string-array>
+    <string-array name="reading_mode_values">
+        <item>Simple</item>
+        <item>Advanced (With Taamey HaMikra)</item>
+    </string-array>
 
-<string name="tikunKlaliTitle">Tikun HaKlali</string>
-<string name="tikunBeforeTitle">Before the Tikun one should say</string>
-<string name="tikunAfter">A small but powerful prayer</string>
-
-<string name="sickTitle">Prayer for the Sick</string>
-
-<string name="yehiAfterTitle">Prayer After Tehilim</string>
-<string name="yehiTitle">
-Prayer Before Tehilim
-</string>
-<string name="all_tehilim">All Psalms</string>
-<string name="choose_day">Choose Day</string>
-
-<string name="dayInMonth">Day %1$s</string>
-
-<string name="tehilim_for_day">Tehilim for %1$s</string>
-
-<string name="for_full_tehilim">Should you have finished the whole book of Tehilim say:</string>
-<string name="for_partial_tehilim">Should you havn\'t finished the whole book of Tehlim say:</string>
-<string name="for_sick">Please say the sick\'s name and Mother\'s name</string>
-	
-	<string-array name="books">
-	    <item>First Book</item>
-	    <item>Second Book</item>
-	    <item>Third Book</item>
-	    <item>Fourth Book</item>
-	    <item>Fifth Book</item>
-	</string-array>
-	
-	<string-array name="week_days">
-<item>Sunday</item>
-<item>Monday</item>
-<item>Tuesday</item>
-<item>Wednesday</item>
-<item>Thursday</item>
-<item>Friday</item>
-<item>Shabbat</item>
-</string-array>
 </resources>
