updated git ignore # Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # On branch master # Your branch is up-to-date with 'origin/master'. # # Changes to be committed: #	modified:   .idea/workspace.xml #	modified:   Tehilim/.gitignore # * Added Last Location object * Added its configuration in App * New Generator factory

--- a/Tehilim/res/values-iw/strings.xml
+++ b/Tehilim/res/values-iw/strings.xml
@@ -56,6 +56,7 @@
     <string name="choose_day">בחר יום</string>
     <string name="all_tehilim">כל הפרקים</string>
     <string name="contact_us">צור קשר</string>
+    <string name="last_position">מיקום אחרון בתהילים</string>
 
     <string-array name="books">
         <item>ספר ראשון</item>
