--- a/Tehilim/res/values/strings.xml
+++ b/Tehilim/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="for_partial_tehilim">Should you havn\'t finished the whole book of Tehlim say:</string>
     <string name="for_sick">Please say the sick\'s name and Mother\'s name</string>
     <string name="contact_us">Contact Us</string>
+    <string name="last_position">Go to Last Position</string>
 
     <string-array name="books">
         <item>First Book</item>
