Added HelpShift SDK and enable GCM

--- a/tehilimlibrary/src/main/res/values-iw/strings.xml
+++ b/tehilimlibrary/src/main/res/values-iw/strings.xml
@@ -17,7 +17,9 @@
     <string name="rate">דרג אותנו</string>
     <string name="version_info">
 <![CDATA[
-	    Lorem Ipsum הוא פשוט טקסט גולמי של תעשיית ההדפסה וההקלדה. Lorem Ipsum היה טקסט סטנדרטי עוד במאה ה-16, כאשר הדפסה לא ידועה לקחה מגש של דפוס ועירבלה אותו כדי ליצור סוג של ספר דגימה. ספר זה שרד לא רק חמש מאות שנים אלא גם את הקפיצה לתוך ההדפסה האלקטרונית, ונותר כמו שהוא ביסודו. ספר זה הפך פופולרי יותר בשנות ה-60 עם ההוצאה לאור של גליון פונטי המכיל פסקאות של Lorem Ipsum. ועוד יותר לאחרונה עם פרסום תוכנות המחשב האישי כגון Aldus page maker שמכיל גרסאות של Lorem Ipsum.
+    * מראה חדש לחלוטין
+    * שיפור פונקציונליות ונוחות שימוש
+    * תהילים ליום השנה
 ]]>
     </string>
     <string name="free_title">הפטר מהפרסומות כעת!</string>
