--- a/tehilimlibrary/src/main/res/values/strings.xml
+++ b/tehilimlibrary/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <string name="gcm_api_key">359973833475</string>
+    <string name="help_shift_api_key">a49980837e8d6162cc3a94558d4faae3</string>
+    <string name="help_shift_url">karriapps.helpshift.com</string>
+    <string name="help_shift_app_id">karriapps_platform_20140721193048762-bb47e09636b7901</string>
     <string name="app_name">Easy Tehilim</string>
     <string name="action_settings">Settings</string>
     <string name="action_help">Help</string>
@@ -18,7 +21,9 @@
     <string name="github_url">https://github.com/orelzion/tehilim</string>
     <string name="version_info">
 <![CDATA[
-
+        * Completely new design<br>
+        * Much improved readability and functionality<br>
+        * Yahrzeit Tehilim
     ]]>
     </string>
     <string name="books_title">By Books</string>
