* Bug and crash fixes * Added release notes file

--- a/tehilimlibrary/src/main/res/values-iw/strings.xml
+++ b/tehilimlibrary/src/main/res/values-iw/strings.xml
@@ -17,11 +17,9 @@
     <string name="rate">דרג אותנו</string>
     <string name="version_info">
 <![CDATA[
-    * מראה חדש לחלוטין
+    * תיקון קריסה בשדרוג
     <br>
-    * שיפור פונקציונליות ונוחות שימוש
-    <br>
-    * תהילים ליום השנה
+* תיקוני באגים (רשימה מלאה בפרוייקט גיטהאב)
 ]]>
     </string>
     <string name="free_title">הפטר מהפרסומות כעת!</string>
