--- a/tehilimlibrary/src/main/res/values-iw/strings.xml
+++ b/tehilimlibrary/src/main/res/values-iw/strings.xml
@@ -19,7 +19,7 @@
 <![CDATA[
     * תיקון קריסה בשדרוג
     <br>
-* תיקוני באגים (רשימה מלאה בפרוייקט גיטהאב)
+* סוף החודש יעודכן בצורה נכונה
 ]]>
     </string>
     <string name="free_title">הפטר מהפרסומות כעת!</string>
