* Adding a list of 3 object to last location * QueueList is added * Laying the ground for a new ExpandableListViewAdapter * Fixing LastLocation setting and changing its key

--- a/tehilimlibrary/src/main/res/values/strings.xml
+++ b/tehilimlibrary/src/main/res/values/strings.xml
@@ -18,9 +18,7 @@
     <string name="github_url">https://github.com/orelzion/tehilim</string>
     <string name="version_info">
 <![CDATA[
-        * Last location is fixed<br>
-        * Added font size to the settings<br>
-        * Font selection will no longer requires restarting the app
+        * Last location is fixed (For real now :)<br>
     ]]>
     </string>
     <string name="books_title">By Books</string>
